--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,16 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: utf8
+  host: localhost
   pool: 5
   timeout: 5000
+  username: postgres
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: spice_viewer
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
